--- a/Codes/CSS CODES/styles.css
+++ b/Codes/CSS CODES/styles.css
@@ -54,7 +54,7 @@ nav a {
   width: 1000px;
   height: 300px;
   top: 250px;
-  left: 375px;
+  left: 440px;
   position: absolute;
   padding-top: 25px;
   font-size: 50px;
@@ -75,7 +75,7 @@ nav a {
   color: black;
   position: absolute;
   top: 650px;
-  left: 575px;
+  left: 650px;
   display: flex;
   font-family: Phantomsans, sans-serif;
   font-size: 25px;
@@ -100,7 +100,7 @@ nav a {
   color: black;
   position: absolute;
   top: 650px;
-  left: 1050px;
+  left: 1100px;
   display: flex;
   font-family: Phantomsans, sans-serif;
   font-size: 25px;
@@ -126,9 +126,10 @@ nav a {
 .card-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
+  gap: 75px;
   max-width: 800px;
   margin: 0 auto;
+  margin-left: 205px;
 }
 
 .card {
