--- a/Codes/CSS CODES/styles.css
+++ b/Codes/CSS CODES/styles.css
@@ -67,7 +67,7 @@ nav a {
 .styled-button-roles {
   background-color: transparent;
   border: 4px solid black;
-  border-radius: 8px;
+  border-radius: 30px;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -76,6 +76,9 @@ nav a {
   position: absolute;
   top: 650px;
   left: 650px;
+  width: 185px;
+  height: 80px;
+  text-align: center;
   display: flex;
   font-family: Phantomsans, sans-serif;
   font-size: 25px;
@@ -86,13 +89,12 @@ nav a {
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
   white-space: nowrap;
 }
 .styled-button-skills {
   background-color: transparent;
   border: 4px solid black;
-  border-radius: 8px;
+  border-radius: 30px;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -101,6 +103,9 @@ nav a {
   position: absolute;
   top: 650px;
   left: 1100px;
+  width: 185px;
+  height: 80px;
+  text-align: center;
   display: flex;
   font-family: Phantomsans, sans-serif;
   font-size: 25px;
@@ -111,7 +116,6 @@ nav a {
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
   white-space: nowrap;
 }
 .styled-button-roles:hover,
